- migrate project to java 21 and spring boot 4 using OpenRewrite